# opengl_base

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  format.sh  run.sh  startup.sh
.cache/clangd/index/: main.cc.9952A2B3F9658BD4.idx
src/: main.cc
